--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,15 @@
   box-sizing: border-box;
 }
 .Polaris-Text--bodyMd {
-  font-size: 16px !important; /* Điều chỉnh cỡ chữ theo ý muốn */
+  font-size: 16px !important;
   font-weight: 600 !important;
 }
 .Polaris-Button {
-  padding: 10px !important; /* Điều chỉnh padding theo ý muốn */
+  padding: 10px !important;
   height: fit-content !important;
+  width: fit-content !important;
+}
+.Polaris-Text--root,
+.Polaris-Text--bodyMd {
+  font-size: 14px !important;
 }
